kubernetes/apps/dev/cinc-registry/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cinc-registry
  namespace: dev
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik-int.ironstone.casa
spec:
  parentRefs:
  - name: traefik-internal
    namespace: network
    sectionName: websecure
  hostnames:
  - cinc-registry.ironstone.casa
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: cinc-registry-api
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cinc-artifacts
  namespace: dev
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik-int.ironstone.casa
spec:
  parentRefs:
  - name: traefik-internal
    namespace: network
    sectionName: websecure
  hostnames:
  - cinc-artifacts.ironstone.casa
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: cinc-registry-gateway
      port: 8082
